--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -169,7 +169,7 @@ What exactly am I <b>feed</b>ing myself at this point? Monster ultra black, soun
 
 <main style="padding: 20px; border-color: green;">
 
-<img src="doctor.jpeg" style="border-width: 0px; float: right;" width="30%">
+<img src="doctor.jpeg" onclick="showText()" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: May 14th 2025</h4>
 <h3>Monster Energy The Doctor (Review)</h3>
@@ -179,7 +179,7 @@ Whether the doctor tastes like medicine or not is up to you. No nevermind don’
 
 <h1>4/10</h1>
 
-<h4 style="color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
+<h4 id="secretText" style="color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
 
 </main>
 
