--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -179,7 +179,7 @@ Whether the doctor tastes like medicine or not is up to you. No nevermind don’
 
 <h1>4/10</h1>
 
-<h4 id="secretText" style="color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
+<h4 id="secretText" style="display:none; color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
 
 </main>
 
