--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -179,8 +179,10 @@ Whether the doctor tastes like medicine or not is up to you. No nevermind don’
 
 <h1>4/10</h1>
 
-<h4 id="secretText" style="display:none; color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
-
+<div id="secretText" style="display:none;">
+<h4 style="color:grey; margin-top: -30px;">//Editor note from MansyS, this fucking hedgehog is being so petty about how this link fucking looks, im so done.</h4>
+</div>
+	
 </main>
 
 <footer style="background-color: black;">
