--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <img src="doors/closedDoor.png" class="siteDoor" width=400px>
 </a>
 
-<a href="esperReviews/index.html">
+<a href="EsperReviews/index.html">
 <img src="doors/closedesperDoor.png" class="esperDoor" width=400px>
 </a>
 
