--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -181,6 +181,37 @@ Whether the doctor tastes like medicine or not is up to you. No nevermind don’
 	
 </main>
 
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+<img src="apple.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: May 27th 2025</h4>
+<h3>Monster Energy Bad Apple (Review)</h3>
+Not bad.
+</p>
+
+<h1>8/10</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+<img src="white.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: May 27th 2025</h4>
+<h3>Monster Energy Ultra White (Review)</h3>
+Should I do a review on the original monster? I mean I have done like 10 reviews and I still have never tried the original. I might not even do it soon because I have planned to make reviews for three other monsters before, and even after that I might not do the original. This monster however was a very nice citrus monster. It has an amazing can design which is actually my favorite despite the somewhat simple look. And a well rounded citrus taste that doesn't taste more of any specific fruit. So yeah, simple but good, definitely one I would buy again. With that said I still prefer aussie lemonade, sadly. Aussie lemonade is no longer made and it will be tough to find one.
+Lately I've seen it slowly fading away in stores until recently when it was no longer there. RIP aussie lemonade I will miss it. I guess this is a good substitute but it won't be the same. This is this and that is that.
+</p>
+
+<h1>7/10</h1>
+	
+</main>
+	
 <footer style="background-color: black;">
 		<br><br>
 		<div class="copyright" style="background-color: green;">
