--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -104,6 +104,22 @@ but me personally, I'm not going to buy it again.
 
 <main style="padding: 20px; border-color: purple;">
 
+	<img src="monster.png" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: May 30th 2025</h4>
+	<h3>Monster Energy (Review)</h3>
+	About 2 years ago, when I first delved into the world of energy drinks, and drank my first monster, I decided to make it my mission to find and drink every monster flavour I could get my hands on. In hopes of one day being able to definitively say which one is the best. Now, And as I am steadily approaching that goal, I though it would be nice to revisit where it all started: Monster energy, the original.
+	What stands out the most about this drink compared to other Monsters is how acidic it tastes. Monster Energy as a whole I find is pretty unique, in how a lot of the time, they're less like regular Energy drinks and more like juice. This, the original flavour, however, Is surprisingly similar to other energy drinks; like Redbull, Powerking, et cetera. It's hard to drink this and feel like I'm not going to experience heartburn from it. It's quite intense, so it might be quite the shock to newcomers that most of the good Monsters are nothing like this. It doesn't taste bad, It's just nothing to write home about is all. In my personal opinion, the original Monster Energy serves little more purpose to a consumer than to introduce you to other flavours you'll probably like better, anyways. That being said, It'll definitely keep you awake. Good riddance.
+	</p>
+
+	<h1>5/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="ntro.png" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: April 4th 2025 (MINECRAFT MOVIE PREMIERE!!)</h4>
