--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -211,6 +211,40 @@ Lately I've seen it slowly fading away in stores until recently when it was no l
 <h1>7/10</h1>
 	
 </main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="violet.png" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: May 28th 2025</h4>
+	<h3>Monster Energy Ultra Violet (Review)</h3>
+	A duck walked up to a lemonade stand And he said to the man, running the stand "Hey! (Bum bum bum) Got any grapes?" The man said "No, we just sell lemonade
+	But it’s cold and it's fresh, and it’s all home-made. Can I get you a glass? "The duck said “I’ll pass.” Then he waddled away, waddle waddle 'Til the very next day, bum bum bum bum bum ba-dum When the duck walked up to the lemonade stand
+	And he said to the man, running the stand "Hey! (Bum bum bum) Got any grapes? The man said "No but, I do sell this Okay? Why not give it a try?" The duck said "Sure that looks like something nice to buy. GRAPE FLAVORED LEMO- I MEAN MONSTER! They could have called it ultra purple but they didn't, WHY? Ultra violet, a very appetizing name, definitely doesn't make it seem like it causes cancer. Maybe it does. I don't know yet… If so, it's too late. Well I guess if this is my last review you will know why. This one tastes like any other grape soda out there. I bet many haven't even tried a grape soda before but explaining it in another way would be very difficult. So compared to grape soda there is like no difference but that is good in my opinion because i like them. That might be a bit controversial. I have heard that many dislike grape soda but I really liked this one. The can design is just what you would expect from any monster ultra, cool in its own way but nothing truly special.
+	</p>
+
+	<h1>7/10</h1>
+	<h4 style="color:grey; margin-top: -30px;">MANSYS NOTE: I'm glad you didn't die since I need you for your reviews!</h4>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="dreams.webp" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: May 30th 2025</h4>
+	<h3>Monster Energy Ultra Strawberry Dreams (Review)</h3>
+	Ultra strawberry dreams, does it taste like a dream?  Yes it does, just like it should seem. A summer day enlightened by a sun beam. Caffeine pumped directly into your bloodstream. In the description it says stuff about love and strawberries almost like they are trying to curse you into loving this monster. If so, then they have succeeded.
+	This is the best monster I've tried so far. It has a good can design (nothing special). And an absolutely delicious sour strawberry taste. I mean this really has to be the perfect summer drink to get you going. When I am done making reviews for the monsters that I can find, this will definitely be a go to choise. Additionally, in contemplation of some consideration, the previously mentioned occur the exclusive monster within pantry remarkably come about sole proportion economical appertaining to my realms foremost currency. Deranged, equitable?
+	</p>
+
+	<h1>90/100</h1>
+	
+</main>
 	
 <footer style="background-color: black;">
 		<br><br>
