--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -28,7 +28,7 @@ main {
 
 <aside id="sidePanel" style="border-color: green; background-color: #fff;  bottom: 20px; position: fixed; left: 10px; width: 200px; min-height: 100px; padding: 5px;">
     <button style="float: right;" onclick="hidepanel()">X</button>
-    <h3 align="center">Are you done reading?</h2>
+    <h3 align="center">Are you done reading?</h3>
     <p>Check out our other reviewers<a href="reviewers.html">reviews</a><br>too! </p>
 </aside>
     
@@ -173,7 +173,7 @@ What exactly am I <b>feed</b>ing myself at this point? Monster ultra black, soun
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: May 14th 2025</h4>
 <h3>Monster Energy The Doctor (Review)</h3>
-Now we have another monster collab. Before I say stuff about this one I have to say that I unfortunately have no more ideas of what lyrics from a Persona song to sneak in. I mean there is no way that you missed that am i right? Anyways the monster tastes like mandarin, yes specifically mandarin.<a style="font-size: 22;" href="https://www.youtube.com/watch?v=ZNGqBDRJgvo"><b>https://www.youtube.com/watch?v=ZNGqBDRJgvo</b></a>That’s pretty much it for what it tastes like but it is also a bit bitter. The bitter taste is mostly what makes me dislike it, well not the bitterness itself but the bitter and weird aftertaste. Now I also have to say that the can design is a little basic, still not bad.
+Now we have another monster collab. Before I say stuff about this one I have to say that I unfortunately have no more ideas of what lyrics from a Persona song to sneak in. I mean there is no way that you missed that am i right? Anyways the monster tastes like mandarin, yes specifically mandarin.<a style="font-size: 22px;" href="https://www.youtube.com/watch?v=ZNGqBDRJgvo"><b>https://www.youtube.com/watch?v=ZNGqBDRJgvo</b></a>That’s pretty much it for what it tastes like but it is also a bit bitter. The bitter taste is mostly what makes me dislike it, well not the bitterness itself but the bitter and weird aftertaste. Now I also have to say that the can design is a little basic, still not bad.
 Whether the doctor tastes like medicine or not is up to you. No nevermind don’t try it.
 </p>
 
