--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -201,6 +201,21 @@ It tastes good, not extremely good, but still good.
 
 <br>
 
+<main style="padding: 20px; border-color: purple;">
+
+<img src="norris.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: July 5th 2025</h4>
+<h3>Monster Energy Lando Norris (Review)</h3>
+Monster Energy has once again come out with a new flavour. And so it is time for me to give a 100% objectively definitive rating from 1 to 10. This, I believe would be the third Monster Energy drink for a formula 1 racer. This one, obviously in collaboration with Lando Norris, and the previous ones being for Lewis Hamilton; the two of whom I am equally unaware of. And while I may be thoroughly out of the loop when it comes to racecar drivers. Or even cars in general, for that matter. Something I can answer; is the question of if a drink tastes good. And for this particular drink. The answer is a resounding "I guess so?" The flavour is supposed to be a mix of Yuzu (which is a citrus fruit you've never heard of until now), and "melon". Just "melon" very vague. The melon part is definitely apparent. And it makes the drink taste refreshing. I can't say that much about the portrayal of Yuzu flavour. I've never ate "Yuzu" and I'm like 90% sure it didn't exist a week ago. Regardless, It tastes citrussy, So I guess they got it. Overall they did a pretty good job, It's not sweet enough for my tastes. But for some people, that can be an upside. It's sometimes nice to have a drink you know you won't finish after just 10 minutes. I'd equate the experience of drinking this to that of chewing gum; It sticks around. Or maybe it doesn't? Monster energy loves cancelling good flavours. lol.
+</p>
+
+<h1>6/10</h1>
+
+</main>
+
+<br>
+
 <main style=" padding: 20px; border-color: purple;">
 
 <img src="mango.jpg" style="border-width: 0px; float: right;" width="27%">
