--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -245,6 +245,51 @@ Lately I've seen it slowly fading away in stores until recently when it was no l
 	<h1>90/100</h1>
 	
 </main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://www.cooperscandy.com/upload/prod/800009862.jpg" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Aug 19th 2025</h4>
+	<h3>Monster Energy Ripper (Review)</h3>
+	From the highest mountain to the deepest trench, that is the feeling. After trying ultra strawberry dreams and drinking this one i was really disappointed. The description made it seem like it was gonna be a really good tropical drink but just like rio punch, it ended up tasting like candy, candy that I don't like. Unlike last time I can explain what it tastes like. But before that i will say that this might be the worst monster there is. I mean both the can design and taste are just BAD and it just makes me hope that this is as deep as the trench goes before hitting rock bottom. That said, don't worry this isn't exactly the worst that I have tasted. It tastes like fizzy pop if you know what that is. I know that many like it but I can't understand that, there are so many better options and I definitely don't like it. Lastly it has some fruity elements to it, say something like mango or pineapple and this is what saves it from being a 2/10. The drink won't rip your body apart but it will kill your excitement.
+	</p>
+
+	<h1>3/10</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://m.media-amazon.com/images/I/71YnRBdJ4gL._UF1000,1000_QL80_.jpg" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Aug 19th 2025</h4>
+	<h3>Monster Energy Punch Mixxd (Review)</h3>
+	This time the can design actually represents the taste perfectly. It looks like what it tastes and I think it should be that way. Imma get straight to the point, it tastes like cherries and grapes. And now looking at the can you should see what I mean. Unlike the cherry flavor from ultra black, this one tastes like dr pepper. I have nothing against dr pepper but also nothing for it. Now i must say that this one is better than dr pepper. Although I am seriously not sure if it's better than ultra black. In the beginning of making my monster reviews I had the problem that my pee would turn green for some mysterious reason. I can't remember a single time where this has happened since the first two reviews I made but this time it was back and not only that it was worse. They must have had a malfunction in the factory making these and accidentally added double the dose of radioactive substances. I may have overreacted last time this happened, back then it was more like a hint of green. This time though it was like green green. NOT FUN. The drink itself was not bad and it was a bit sour, cherry and grape in drinks doesn't scream sour, maybe that's just the way it is or it had a third taste maybe also a fourth, it is called mixxd after all. FUN.
+	</p>
+
+	<h1>5 I think/10 Maybe</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://static.thcdn.com/images/large/original//productimg/1600/1600/13838938-1145176579759383.jpg" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Aug 19th 2025</h4>
+	<h3>Monster Energy Ultra Rosá (Review)</h3>
+	This is another amazing monster, second best so far. The can design is lookin cool and really beautiful with the roses, not only that the taste is just as beautiful. So what does it taste like? It tastes like ultra rosa! Now you might be wondering: is that all you are gonna say about the taste? Yes, yes it is… But let me explain why. So on the description it says that the best way of describing the way it tastes is that it tastes like ultra rosa and since I want to have the best monster reviews I have to deliver accurate taste analyses. The ultra rosa taste you are tasting when tasting the ultra rosa is the taste of ultra rosa you are tasting if tasting the ultra rosa. But for real this one is really good and kinda feels the same as ultra strawberry dreams so it wouldn't be fair to put it any lower. Smells like roses.
+	</p>
+
+	<h1>9/10</h1>
+	
+</main>
 	
 <footer style="background-color: black;">
 		<br><br>
