--- a/EsperReviews/index.html
+++ b/EsperReviews/index.html
@@ -70,6 +70,22 @@ If you're like anything like me, the very first thing you do after buying a new 
 
 <main style="padding: 20px; border-color: purple;">
 
+<img src="vr.png" style="border-width: 0px; float: right;" width="30%">
+<p>
+<h4 style="color:grey; margin-top: -30px;">Published: September 12th 2025</h4>
+<h3>Monster Energy Valentino Rossi VR | 46 (Review)</h3>
+Ok, so, let's address the elephant in the room. Clearly the good people from the creative team at Monster have gone mentally insane. whether it was hours spend watching racing events on tv on company time, or the assumed kilos of cocaine they consume on a daily basis, which finally shot the bullet to their mental stability; we may never know. But what can absolutely surmise is that no person who is in control of their own actions would say it's a good idea to give yet another monster flavour to those despicable gremlins that are sport fans. It's a crime to society that we've gotten at least 5 monsters for famous racers. But not a single one dedicated to any famous artists, mathematicians or plumbers. The blatant discrimination of the Monster Energy creative team is really bleeding through. Valentino Rossi is nothing but a toddler who decided to crawl into the drivers seat of a motorcycle. Anyone could do what he does. it's literally just putting your hands on a pair of handle bars, and doing interviews. A baby could do it. And he isn't even that hot... But I digress.....
+hmmmmm... oh! the drink! that's right, this is a review isn't it. uhhhhh. My first impressions of the drink is that it reminded me of Monster Energy Lando Norris. And as it happens. I've actually gone and bought a can of both, so I could compare them directly for this review. What I first noticed when I poured them into the glass is how similar the colours are, they are both a light lime green. Norris being slightly more green than Rossi, and Rossi leaning to lighter yellow and being a bit more opaque. As for flavour. They were not nearly as similar in practice as I would have thought from my memories. Norris is very sweet and flavour-packed. Meanwhile Rossi is Much more bitter. The flavour is similar to that of an orange soda. But as you would expect; Less sugar. The bitterness is not a problem for me, in fact. I like it. It makes It stand out more against other similar drinks like Zingo or Fanta. But as it is. It just feels like It's a bit plain. A secondary fruit flavouring would be really nice here. Alas, I think citrus is not enough to carry a sugar-free Monster by itself. This is why Valentino Rossi need to be admitted to an insane asylum immediately. 
+</p>
+
+<h1>4/10</h1>
+
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: purple;">
+
 <img src="lewis.avif" style="border-width: 0px; float: right;" width="30%">
 <p>
 <h4 style="color:grey; margin-top: -30px;">Published: March 26th 2025</h4>
