--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 <img src="doors/closedserverDoor.png" class="servermanageDoor" width=400px>
 </a>
 
+<a href="wm/index.html">
+<img src="doors/closedExperiments.png" class="experimentsDoor" width=400px>
+</a>
+
 </div>
 
 </body>
