Super snazzy bazzy

--- a/wm/index.html
+++ b/wm/index.html
@@ -18,6 +18,16 @@
          800,600,
          'Site','SiteBar'
     )"><img src="monster.png"><br>Monster Reviews</button>
+    
+    <button onclick="subway = VideoToHtml('https://www.youtube.com/watch?v=QPW3XwBoQlw?autoplay=1') ; Windows('Relaxing Subway Surfers gameplay',
+         subway,
+         800,600,
+         'Surf','SurfBar'
+    )"><img src="subwaysurf.png"><br>SS gameplay</button>
+
+    <h1 id="Tooltip" style="color: darkred; position: absolute; left: 10px; bottom: 0px;">This webpage is best viewed at 80% zoom scale!</h1>
+    <button onclick="document.getElementById('Tooltip').remove() ; this.remove()" style="position: absolute; left: 10px; bottom: 70px;">remove the stupid text below</button>
+
 </body>
 <script src="script.js"></script>
 </html>
