--- a/wm/index.html
+++ b/wm/index.html
@@ -10,19 +10,19 @@
         '<h1>Hello fellow traveler of the internet!</h1>' +
          'Welcome to my window manager website experiment! Hope you like it!',
          800,600,
-         'Intro','IntroBar'
+         'Intro'
     )"><img src="info.png"><br>Introduction</button>
 
     <button onclick="site = WebsiteToHtml('https://mansysite.org/EsperReviews/', 550) ; Windows('Monster Reviews',
          site,
          800,600,
-         'Site','SiteBar'
+         'Site'
     )"><img src="monster.png"><br>Monster Reviews</button>
     
     <button onclick="subway = VideoToHtml('https://www.youtube.com/watch?v=QPW3XwBoQlw?autoplay=1') ; Windows('Relaxing Subway Surfers gameplay',
          subway,
          800,600,
-         'Surf','SurfBar'
+         'Surf'
     )"><img src="subwaysurf.png"><br>SS gameplay</button>
 
     <h1 id="Tooltip" style="color: darkred; position: absolute; left: 10px; bottom: 0px;">This webpage is best viewed at 80% zoom scale!</h1>
