--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -313,12 +313,27 @@ Persistent, purplish black berries are high in nutrients and can be used for pie
 
 	<img src="https://i5.walmartimages.com/asr/7ef83009-0811-4c4c-98d4-3b71966bd43c.45d879f9af0882897017b3f757ecb26f.jpeg?odnHeight=612&odnWidth=612&odnBg=FFFFFF" style="border-width: 0px; float: right;" width="30%">
 	<p>
-	<h4 style="color:grey; margin-top: -30px;">Published: Sep 125th 2025</h4>
+	<h4 style="color:grey; margin-top: -30px;">Published: Sep 15th 2025</h4>
 	<h3>Monster Energy Ultra Blue Hawaiian (Review)</h3>
 	I know there is another ultra-blue monster, so is this the same, a remake or something totally new? The can design reminds me of a juiced or punch monster like rio puch and viking berry and not the simple patterns of an ultra-monster. The taste on the other hand is something that you’d find in an ultra-monster, if you put on a blindfold and tasted this one you wouldn’t mistake it for a juiced one. Moreover it doesn’t matter because ultra-monsters have one thing in common in which they are named after, they are sugar free, of course this one included. The taste has a very low profile fruit taste and a touch of coconut. Not only that, it also has a familiar weird taste and I think I know what it is. So from my past reviews you have seen that I often say that there is another unidentified taste on top of the others, either I'm just bad at identifying tastes or it is the same one that became more clear in this monster due to it having a low flavor profile. On the reviews on many if not all monsters it says that the flavor is fruits or whatever mixed with the original monster blend. I think that the weird taste may be the original monster taste, maybe I have a good idea of what the original monster flavor is like even though I've never had the original one. That fruit taste is probably pineapple, coconut and pineapple, a classic combo. Fresh summery drink, fresh summery energy perfect for the autumn.
 	</p>
 
 	<h1>7/10</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://cdn11.bigcommerce.com/s-zj6x66u8ej/images/stencil/1500x1500/products/399/1121/US_Monster_Ultra_ViceGuava_24x16oz_V2__59456.1738184849.jpg?c=1" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Sep 15th 2025</h4>
+	<h3>Monster Energy Ultra Vice Guava (Review)</h3>
+	This one has a more interesting can design than the flavor itself. This one was really underwhelming the flavor. It is of course supposed to taste like guava but it doesn't taste like much at all. It might be guava flavored but I'm not sure when it tastes like sweet flavored water. The can design on the other hand is really well made, the colors match perfectly and it has a nice but simple pattern and to top it all off, the top of the can is colored as well. Having colored the top part of the can really makes a difference. It just looks so much better that way and the only monster except for this one that i know of having this is the regular sugar free one. I even think this is my new favorite ultra-monster design. On another note I must mention that I did try a monster rehab without making a review of it. My reason for this is that it was so different from other monsters, first it isn't carbonated and second it tastes similar to prime. My reviews are of monster energy drinks and that one is more of a sports drink or something in my opinion. Oh and also i wont be making reviews of java monsters either. Back to the review. If this is your favorite monster then you actually have something in common with ultra vice guava. You have no taste.
+	</p>
+
+	<h1>3/10</h1>
 	
 </main>
 	
