Add Monster Energy Drink review

--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -351,6 +351,21 @@ Persistent, purplish black berries are high in nutrients and can be used for pie
 	<h1>4/10</h1>
 	
 </main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi5.walmartimages.com%2Fasr%2Feb784454-63fb-44d2-89ff-b24782be4477_1.de79b106569228409c531001693c29a6.jpeg&f=1&nofb=1&ipt=27fd4f539c94ed0f532bf348426e44ca46909877fd537b6c0aa93eb2447ffd8f" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Nov 3rd 2025</h4>
+	<h3>Monster Energy Drink (Review)</h3>
+	Alright It is the 20th review so we are doing something special for this one. It is finally time for the monster that started it all MONSTER, the meanest energy drink. So we all know the classic can design simple but it works, i was more interested in the taste. After so long I have never known how the original tasted but we’re here now. Why is it called the meanest energy drink? Is it just a marketing thing once again or is it actually being mean against your insides. I mean it has some chemical (and radioactive) substance that colors pee and also for some reason this energy drink hits way harder than others. Like even if another energy drink has more caffeine it just doesn’t hit the same. The taste is very unique, imagine the taste of redbull mixed with piggelin (The popsicle if you know) and also a little bit of vanilla. A crazy combo indeed and I'm not quite sure if it works that well but it was somewhat good either way. Yes.
+	</p>
+
+	<h1>4/10</h1>
+	
+</main>
 	
 <footer style="background-color: black;">
 		<br><br>
