Add reviews for Monster Energy flavors
Added reviews for Monster Energy drinks with ratings.

--- a/EsperReviews/igelkotten.html
+++ b/EsperReviews/igelkotten.html
@@ -341,6 +341,21 @@ Persistent, purplish black berries are high in nutrients and can be used for pie
 
 <main style="padding: 20px; border-color: green;">
 
+	<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn11.bigcommerce.com%2Fs-zj6x66u8ej%2Fimages%2Fstencil%2F1500x1500%2Fproducts%2F397%2F971%2FUS_Monster_Ultra_Fantasy_Ruby_Red_24x16oz_Case_3QTR_Can_1223__59309.1709247888.png%3Fc%3D1&f=1&nofb=1&ipt=d20ec8ef2ae65d3c92a68587ffe14eb7185f929cefde93ca760eb10d46c3587c" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Oct 16th 2025</h4>
+	<h3>Monster Energy Ultra Fantasy Ruby Red (Review)</h3>
+	The first thing I did was read the description. It says that this is the best ultra-monster, WHAT, are they glazing their own product or is it just one guy that writes the descriptions and decides to state his opinion. That's my job. Maybe it was just a marketing tactic that I fell for, doesn't matter because I plan to try all of the 150 monster flavors if I ever get my hands on something close to that number. Anyways i dont agree with the person writing the description, this is not the best ultra-monster. I prefer dreams of strawberries over fantasies of red rubies. Aren't all rubies red? The can design looks like an interesting fantasy, red pink blue and black colors with interesting figures. Honestly, it looks intimidating like a nightmare, almost making me scared to drink it. I was imagining this as drinking literal nightmare fuel however I was pleasantly surprised with a familiar taste after the first sip, this is just another monster. Nothing new for the taste in my opinion. Boring but makes my job easy. What does it taste like? Monster ultra white. Just buy either regular monster ultra, ultra white as i like to call it or aussie lemonade instead, yes aussie lemonade was actually never gone. This is this but also that.
+	</p>
+
+	<h1>7/10</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
 	<img src="https://www.sportkost.se/pub_images/original/monster_valentino_rossi_vr46_24x500ml.jpg" style="border-width: 0px; float: right;" width="30%">
 	<p>
 	<h4 style="color:grey; margin-top: -30px;">Published: Oct 20th 2025</h4>
@@ -364,6 +379,21 @@ Persistent, purplish black berries are high in nutrients and can be used for pie
 	</p>
 
 	<h1>4/10</h1>
+	
+</main>
+
+<br>
+
+<main style="padding: 20px; border-color: green;">
+
+	<img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fm.media-amazon.com%2Fimages%2FI%2F919IK2sFtYL.jpg&f=1&nofb=1&ipt=67e1a2e3269af6999da4963ce9d1e1ca9ba5d420ec0ca57f760a0d25d8cb56e8" style="border-width: 0px; float: right;" width="30%">
+	<p>
+	<h4 style="color:grey; margin-top: -30px;">Published: Nov 6th 2025</h4>
+	<h3>Monster Energy Ultra Paradise (Review)</h3>
+	Unlike aussie lemonade this one is actually gone from the stores. I was able to find it in a small store for double the price of a normal monster. who knows maybe it will have a comeback too. To be honest I don't care if it does. It tastes like kiwi and uh something. Cucumber? That sounds ridiculous tho cucumber taste yeah it’s probably the green color that's fooling me. It tastes only like kiwi. Sounds really good but it wasn't that good, i cant explain really what makes it just alright, maybe because there are way better monsters out there. (Can design exists). In the description it says that paradise can be found anywhere. That “anywhere” is not here.
+	</p>
+
+	<h1>6/10</h1>
 	
 </main>
 	
